crates/ruff_linter/src/message/snapshots/ruff_linter__message__rdjson__tests__output.snap
---
source: crates/ruff_linter/src/message/rdjson.rs
expression: content
---
{
  "diagnostics": [
    {
      "code": {
        "url": "https://docs.astral.sh/ruff/rules/unused-import",
        "value": "F401"
      },
      "location": {
        "path": "/projects/project/fib.py",
        "range": {
          "end": {
            "column": 10,
            "line": 1
          },
          "start": {
            "column": 8,
            "line": 1
          }
        }
      },
      "message": "`os` imported but unused",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 1,
              "line": 2
            },
            "start": {
              "column": 1,
              "line": 1
            }
          },
          "text": ""
        }
      ]
    },
    {
      "code": {
        "url": "https://docs.astral.sh/ruff/rules/unused-variable",
        "value": "F841"
      },
      "location": {
        "path": "/projects/project/fib.py",
        "range": {
          "end": {
            "column": 6,
            "line": 6
          },
          "start": {
            "column": 5,
            "line": 6
          }
        }
      },
      "message": "Local variable `x` is assigned to but never used",
      "suggestions": [
        {
          "range": {
            "end": {
              "column": 10,
              "line": 6
            },
            "start": {
              "column": 5,
              "line": 6
            }
          },
          "text": ""
        }
      ]
    },
    {
      "code": {
        "url": "https://docs.astral.sh/ruff/rules/undefined-name",
        "value": "F821"
      },
      "location": {
        "path": "/projects/project/undef.py",
        "range": {
          "end": {
            "column": 5,
            "line": 1
          },
          "start": {
            "column": 4,
            "line": 1
          }
        }
      },
      "message": "Undefined name `a`"
    }
  ],
  "severity": "warning",
  "source": {
    "name": "ruff",
    "url": "https://docs.astral.sh/ruff"
  }
}
